RESOLVED FIXED 98364
[GTK] accessibility/editable-webarea-context-menu-point.html is failing
https://bugs.webkit.org/show_bug.cgi?id=98364
Summary [GTK] accessibility/editable-webarea-context-menu-point.html is failing
Zan Dobersek
Reported 2012-10-04 00:39:00 PDT
Attachments
Patch (14.05 KB, patch)
2012-12-09 04:41 PST, Joanmarie Diggs
no flags
Patch (14.24 KB, patch)
2012-12-09 05:46 PST, Joanmarie Diggs
no flags
Joanmarie Diggs
Comment 1 2012-10-17 05:24:19 PDT
Definitely will require implementing AccessibilityUIElement::clickPointX(). Whether or not that will be sufficient to make this test pass remains to be seen.
Joanmarie Diggs
Comment 2 2012-12-09 04:41:26 PST
Joanmarie Diggs
Comment 3 2012-12-09 04:43:51 PST
Chris: This patch just moves the failing test to the Mac platform as it seems to be mac-specific. I already checked with Mario and he agrees. Please review. Thanks in advance!
Build Bot
Comment 4 2012-12-09 05:15:53 PST
Comment on attachment 178410 [details] Patch Attachment 178410 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/15222297 New failing tests: platform/mac/accessibility/editable-webarea-context-menu-point.html
Joanmarie Diggs
Comment 5 2012-12-09 05:34:36 PST
I'm assuming that the failure on the mac is due to the fact that I'm moving the test, rather than a real failure.(?)
Joanmarie Diggs
Comment 6 2012-12-09 05:46:18 PST
chris fleizach
Comment 7 2012-12-09 23:40:05 PST
Comment on attachment 178414 [details] Patch click point on the mac is just the center point of the bounding box. maybe there's something else that makes that hard to get to
WebKit Review Bot
Comment 8 2012-12-10 00:05:48 PST
Comment on attachment 178414 [details] Patch Clearing flags on attachment: 178414 Committed r137113: <http://trac.webkit.org/changeset/137113>
WebKit Review Bot
Comment 9 2012-12-10 00:05:53 PST
All reviewed patches have been landed. Closing bug.
Joanmarie Diggs
Comment 10 2012-12-10 00:11:44 PST
(In reply to comment #7) > (From update of attachment 178414 [details]) > click point on the mac is just the center point of the bounding box. maybe there's something else that makes that hard to get to Aha! I didn't know about the bounding box. Bounding boxes I can get and center point I can calculate. Not sure if that makes this patch rollout-worthy....
Note You need to log in before you can comment on or make changes to this bug.