[GTK] accessibility/editable-webarea-context-menu-point.html is failing https://bugs.webkit.org/show_bug.cgi?id=98364

Patch by Joanmarie Diggs <jdiggs@igalia.com> on 2012-12-10
Reviewed by Chris Fleizach.

Tools:

The test is failing because the clickPoint values remain unchanged. The
values remain unchanged because ATK lacks a means to keep track of this
information.

* DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
(AccessibilityUIElement::clickPointX): Added comment that ATK doesn't have clickPoint details
(AccessibilityUIElement::clickPointY): Added comment that ATK doesn't have clickPoint details

LayoutTests:

This test seems to be Mac-specific. Therefore, move the test to that
platform and remove the skips from the other platforms.

* platform/chromium/TestExpectations: Remove editable-webarea-context-menu-point.html
* platform/efl-wk2/TestExpectations: Remove editable-webarea-context-menu-point.html
* platform/gtk-wk2/TestExpectations: Remove editable-webarea-context-menu-point.html
* platform/gtk/TestExpectations: Remove editable-webarea-context-menu-point.html
* platform/mac/accessibility/editable-webarea-context-menu-point-expected.txt: Renamed from LayoutTests/accessibility/editable-webarea-context-menu-point-expected.txt.
* platform/mac/accessibility/editable-webarea-context-menu-point.html: Renamed from LayoutTests/accessibility/editable-webarea-context-menu-point.html.
* platform/win/TestExpectations: Remove editable-webarea-context-menu-point.html
* platform/wincairo/TestExpectations: Remove editable-webarea-context-menu-point.html

Canonical link: https://commits.webkit.org/122672@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137113 268f45cc-cd09-0410-ab3c-d52691b4dbfc